Add Skill section in Index file

--- a/index.html
+++ b/index.html
@@ -10,13 +10,15 @@
         <div id="header">
             <h2>Mukeshbabu M</h2>
             <p>Software Development Engineer</p>
-            <br>
             <p>Address: Bengaluru, Karnataka<br>
-                Phone No : +91 96550 96671<br>
+                Phone No : +91 96550 XXXXX<br>
                 Email ID : <a href="mailto:mukeshbabu6671@gmail.com">mukeshbabu6671@gmail.com</a>
             </p>
         </div>
-
+        <div id="skills">
+            <p>Skills</p>
+            <p>Java, SQL, HTML, CSS, JavaScript, Python, Git, GitHub, Web Development, MySQL, Manual Testing, Software Development Life Cycle.</p>
+        </div>
     </div>
 </body>
 </html>
