--- a/index.html
+++ b/index.html
@@ -19,6 +19,16 @@
             <p>Skills</p>
             <p>Java, SQL, HTML, CSS, JavaScript, Python, Git, GitHub, Web Development, MySQL, Manual Testing, Software Development Life Cycle.</p>
         </div>
+        <div id="education">
+            <p>Education</p>
+            <p>GTEC, Vellore, Tamil Nadu - B.E Computer Science and Engineering<br>
+                SEP 2019 to APR 2023
+                <ul>
+                    <li>Cumulative Grade Point Average(CGPA) - 7.65</li>
+                    <li>Member of College Coding Club, engaged in coding events and peer collaboration</li>
+                </ul>
+            </p>
+        </div>
     </div>
 </body>
 </html>
