--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="image" type="image" href="https://icon-icons.com/icons2/3237/PNG/512/animation_application_video_website_social_media_giphy_icon_197366.png">
     <title>Single Page CV</title>
 </head>
 <body>
