Experience Section added

--- a/index.html
+++ b/index.html
@@ -30,6 +30,16 @@
                 </ul>
             </p>
         </div>
+        <div id="Internship">
+            <p>Internship</p>
+            <p>KodNest Technologies Pvt Ldt, Bengaluru, KA - Software Development Intern<br>
+               AUG 2023 to APR 2024<br>
+               <ul>
+                <li>Gained hands-on experience in Java, MySQL, Frontend Technology, and Manual Testing</li>
+                <li>Contributed to real-world projects, collaborating with industry professionals</li>
+               </ul>
+            </p>
+        </div>
     </div>
 </body>
 </html>
