created a style.css file and link to index.html file

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-iocn" href="/Images/Page Icon.ico">
+    <link rel="stylesheet" href="style.css">
     <title>Single Page CV</title>
 </head>
 <body>
@@ -39,6 +40,13 @@
                 <li>Contributed to real-world projects, collaborating with industry professionals</li>
                </ul>
             </p>
+        </div>
+        <div id="links">
+            <p>Across the Internet</p>
+            <ul>
+                <li><a href="https://www.linkedin.com/in/mukeshbabum" target="_blank">linkedin.com/mukeshbabum</a></li>
+                <li><a href="https://github.com/mukeshbabu-mb" target="_blank">github.com/mukeshbabu-mb</a></li>
+            </ul>
         </div>
     </div>
 </body>
