add style for main and h2 tag

--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 </head>
 <body>
     <div id="Main">
+        <hr width="80%" size="2px" color="black">
         <div id="header">
             <h2>Mukeshbabu M</h2>
-            <p>Software Development Engineer</p>
+            <p id="role">Software Development Engineer</p>
             <p>Address: Bengaluru, Karnataka<br>
                 Phone No : +91 96550 XXXXX<br>
                 Email ID : <a href="mailto:mukeshbabu6671@gmail.com">mukeshbabu6671@gmail.com</a>
