add style to header div

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <hr width="80%" size="2px" color="black">
         <div id="header">
             <h2>Mukeshbabu M</h2>
-            <p id="role">Software Development Engineer</p>
+            <h3 id="role">Software Development Engineer</h3>
             <p>Address: Bengaluru, Karnataka<br>
                 Phone No : +91 96550 XXXXX<br>
                 Email ID : <a href="mailto:mukeshbabu6671@gmail.com">mukeshbabu6671@gmail.com</a>
