--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
             </p>
         </div>
         <div id="skills">
-            <p>Skills</p>
+            <h3>Skills</h3>
             <p>Java, SQL, HTML, CSS, JavaScript, Python, Git, GitHub, Web Development, MySQL, Manual Testing, Software Development Life Cycle.</p>
         </div>
         <div id="education">
-            <p>Education</p>
+            <h3>Education</h3>
             <p>GTEC, Vellore, Tamil Nadu - B.E Computer Science and Engineering<br>
                 SEP 2019 to APR 2023
                 <ul>
@@ -33,7 +33,7 @@
             </p>
         </div>
         <div id="Internship">
-            <p>Internship</p>
+            <h3>Internship</h3>
             <p>KodNest Technologies Pvt Ldt, Bengaluru, KA - Software Development Intern<br>
                AUG 2023 to APR 2024<br>
                <ul>
@@ -43,7 +43,7 @@
             </p>
         </div>
         <div id="links">
-            <p>Across the Internet</p>
+            <h3>Across the Internet</h3>
             <ul>
                 <li><a href="https://www.linkedin.com/in/mukeshbabum" target="_blank">linkedin.com/mukeshbabum</a></li>
                 <li><a href="https://github.com/mukeshbabu-mb" target="_blank">github.com/mukeshbabu-mb</a></li>
