--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
         <div id="links">
             <h3>Across the Internet</h3>
             <ul>
-                <li><a href="https://www.linkedin.com/in/mukeshbabum" target="_blank">linkedin.com/mukeshbabum</a></li>
-                <li><a href="https://github.com/mukeshbabu-mb" target="_blank">github.com/mukeshbabu-mb</a></li>
+                <li><a href="https://www.linkedin.com/in/mukeshbabum" target="_blank">Linkedin : mukeshbabum</a></li>
+                <li><a href="https://github.com/mukeshbabu-mb" target="_blank">Github : mukeshbabu-mb</a></li>
             </ul>
         </div>
     </div>
